[package]
name = "arkecosystem-crypto"
version = "0.1.0"
authors = ["Joshua Noack <joshua@ark.io>"]
description = "A simple Cryptography Implementation in Rust for the ARK Blockchain."
license = "MIT"

[lib]
name = "arkecosystem_crypto"
path = "src/lib.rs"

[dependencies]
bitcoin = "0.15.1"
secp256k1 = "0.12.0"
sha2 = "0.8.0"
failure = "0.1.3"
serde = "1.0.80"
serde_json = "1.0.33"
serde_derive = "1.0.80"
lazy_static = "1.2.0"
chrono = "0.4.6"
hex = "0.3.2"
ripemd160 = "0.8.0"
byteorder = "1.2.7"
