[package]
name = "arkecosystem-crypto"
version = "0.1.0"
authors = ["Joshua Noack <joshua@ark.io>"]
description = "A simple Cryptography Implementation in Rust for the ARK Blockchain."
license = "MIT"

[lib]
name = "arkecosystem_crypto"
path = "src/lib.rs"

[dependencies]
bitcoin = "0.21.0"
secp256k1 = "0.15.5"
sha2 = "0.8.0"
failure = "0.1.6"
serde = "1.0.102"
serde_json = "1.0.41"
serde_derive = "1.0.102"
lazy_static = "1.4.0"
chrono = "0.4.9"
hex = "0.4.0"
ripemd160 = "0.8.0"
byteorder = "1.3.2"
