[package]
name = "arkecosystem-crypto"
version = "0.1.0"
authors = ["Joshua Noack <joshua@ark.io>"]
description = "A simple Cryptography Implementation in Rust for the ARK Blockchain."
license = "MIT"

[lib]
name = "arkecosystem_crypto"
path = "src/lib.rs"

[dependencies]
bitcoin = "0.23.0"
secp256k1 = "0.17.2"
sha2 = "0.9.1"
failure = "0.1.8"
serde = "1.0.114"
serde_json = "1.0.56"
serde_derive = "1.0.114"
lazy_static = "1.4.0"
chrono = "0.4.15"
hex = "0.4.2"
ripemd160 = "0.9.1"
byteorder = "1.3.4"
